fdpg/mailbox/server/depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdpg-mailbox-server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector: {}
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: none
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 2101
        fsGroupChangePolicy: "OnRootMismatch"
        runAsGroup: 2101
        runAsUser: 2101
      containers:
      - name: mailbox
        image: ghcr.io/datasharingframework/fhir:2.1.0
        ports:
        - name: http
          containerPort: 8080
        - name: health
          containerPort: 10000
        volumeMounts:
          - name: ca-certs
            mountPath: /run/secrets/life-ca-certs
            readOnly: true
          - name: dsf-creds
            mountPath: /run/secrets/creds
            readOnly: true
          - name: config-dir
            mountPath: /opt/fhir/conf
        startupProbe:
          httpGet: &probe
            path: /fhir/status
            port: health
          failureThreshold: 24
          periodSeconds: 10
        readinessProbe:
          httpGet: *probe
        livenessProbe:
          httpGet: *probe
        resources:
          requests:
            cpu: "125m"
            memory: "2Gi"
          limits:
            memory: "2Gi"
      volumes:
      - name: ca-certs
        configMap:
          name: life-ca-certs
          items:
          - key: life-root-ca-2.pem
            path: life-root-ca-2.pem
      - name: dsf-creds
        secret:
          secretName: fdpg-dsf-creds
          items:
          - key: cert
            path: cert.pem
          - key: pkey
            path: key.pem
            mode: 0400
      - name: config-dir
        emptyDir: {}
